--- a/Sales Intelligence Challenge.ipynb
+++ b/Sales Intelligence Challenge.ipynb
@@ -5,7 +5,7 @@
    "id": "216908d6-87eb-424e-bed2-d8413c88bfbb",
    "metadata": {},
    "source": [
-    "# Part 1 – Problem Framing (NO CODE)\n",
+    "# Part 1 – Problem Framing \n",
     "**1️. What is the real business problem?**\n",
     "\n",
     "**Answer:**\n",
